<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info"
    android:padding="10dp" >

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_title"
        android:textSize="30sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/info_purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_title"
        android:layout_marginTop="5dp"
        android:text="@string/info_purpose"
        android:typeface="serif" />

    <TextView
        android:id="@+id/info_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_purpose"
        android:layout_marginTop="15dp"
        android:text="@string/info_instructions"
        android:typeface="serif" />

    <TextView
        android:id="@+id/info_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_instructions"
        android:layout_marginTop="15dp"
        android:text="@string/info_contact"
        android:typeface="serif" />
</RelativeLayout>